# CodingBlocks

./: README.md  hello.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: LoginPage.jsx  MovieCard.jsx  Navbar.jsx  Payment.jsx  ProtectedRoute.jsx  Register.jsx  SearchComponent.jsx  SeatSelector.jsx
frontend/src/pages/: Home.jsx  SearchPage.jsx
frontend/src/styles/: MovieDetails.css  SeatSelection.css  card.css
ticket/: db.sqlite3
ticket/home/: admin.py  models.py  serializers.py  views.py
ticket/home/migrations/: 0001_initial.py  0002_movies_ticket.py
ticket/ticket/: asgi.py  settings.py  urls.py  wsgi.py
